--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1""scripts":
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-  "node": "18.x",
-  "npm": "8.x"
+    "node": "18.x",
+    "npm": "8.x"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,6 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.9.2"
+    "mongoose": "^8.9.5"
   }
 }
-
